--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,20 @@
-/* Asterisk wildcar selector to a override default styles added by browser */
+/* Asterisk wildcard selector to a override default styles added by browser */
 *{
     padding:0;
     margin: 0;
     box-sizing: border-box;
 }
+
+/* General Styles */
+body {
+    min-height: 100vh;
+    display:flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color:#3a3a3a;
+}
+
+
 
 /* Header */
 header {
@@ -12,6 +23,8 @@ header {
 /* Main Content*/
 main { 
     background: lightblue;
+    flex:auto;
+    /* Make main element take up any surplus space to push footer down */
 }
 /* Footer */
 footer {
