--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
     flex-direction: column;
     /* Generic project styles */
     color: #3a3a3a;
-    font-family:"lato", sans-serif;
+    font-family:"Lato", sans-serif;
 }
 
 
@@ -23,6 +23,10 @@ body {
 /* Header */
 header {
     background-color: lightcoral;
+}
+
+h1 {
+    font-family: "Oswald", sans-serif;
 }
 /* Main content*/
 main { 
