--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,8 @@ nav {
 main { 
     background-color: lightblue;
     flex:auto;
+    margin-top:47px;
+    
     /* Make main element take up any surplus space to push footer down */
 }
 /* Footer */
