--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,12 +30,12 @@ header {
     box-shadow: 0 2px #3a3a3a;
     display:flex;
     justify-content: space-between;
-    align-items:baseline;
+    align-items: baseline;
 
 }
 header a {
-    text-decoration:none;
-    color:inherit;
+    text-decoration: none;
+    color: inherit;
 }
 
 h1 {
@@ -47,10 +47,10 @@ h1 {
 #menu {
     font-size:110%;
     letter-spacing:4px;
-    list-style-type:none ;
+    list-style-type: none;
 }
 #menu > li{
-    margin-bottom:1em;
+    margin-bottom: 1em;
 }
 .active{
     border-bottom: 1px solid #3a3a3a;
@@ -59,23 +59,23 @@ h1 {
 nav {
     position: absolute;
     background-color: #ffffff;
-    width:100%;
-    left:0;
+    width: 100%;
+    left: 0;
     padding: 0 1em;
     box-shadow: 0 2px #3a3a3a;
-    display:none;
-    top:100%;
+    display: none;
+    top: 100%;
 
 }
 /* Nav toggle */
 #nav-toggle:checked~nav{
-    display:block;
+    display: block;
 }
 #nav-toggle{
-    display:none;
+    display: none;
     }
 .nav-toggle-label{
-    font-size:2rem;
+    font-size: 2rem;
 }
 
 /* Main content*/
@@ -83,10 +83,31 @@ main {
     background-color: lightblue;
     flex:auto;
     margin-top:47px;
-    
+
     /* Make main element take up any surplus space to push footer down */
 }
 /* Footer */
 footer {
     background-color: orange;
+}
+/* media query tablets and larger (768px and up)*/
+@media screen and (min-width:768px){
+  /* Header */  
+  nav{
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width:fit-content;
+    padding-right: 1rem;
+  }
+#menu{
+    display: flex;
+}
+#menu>li{
+    padding-left:1rem;
+}
+.nav-toggle-label{
+    display:none;
+    
+}
 }
