style for footer all size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,8 +87,18 @@ main {
     /* Make main element take up any surplus space to push footer down */
 }
 /* Footer */
-footer {
-    background-color: orange;
+#social-networks {
+    text-align: center;
+    padding: 20% 0;
+    display:flex;
+    justify-content: space-evenly;
+    list-style-type: none;
+}
+#social-networks i {
+font-size:160%;
+padding: 5%;
+color:#3a3a3a;
+
 }
 /* media query tablets and larger (768px and up)*/
 @media screen and (min-width:768px){
