--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,28 @@ main{
     width:300px;
     right:50px;
 }
+/*Reasons*/
+#reasons {
+    width:90%;
+    margin:20px auto;
+}
+#reasons h2{
+    margin-bottom: 20px;
+    text-align:center;
+    font: size 280%;
+}
+#benefits-physical>div,
+#benefits-mental>div {
+    line-height: 20px;
+    margin-bottom: 20px;}
+ #benefits p {
+        padding: 0 20px;
+    }
+  hr{
+    border-top:1px solid #3a3a3a;
+    margin:5px 0;
+  }  
+
 }
 /* media query notebooks and larger (992px and up)*/
 @media screen and (min-width:992px) {
