--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,25 @@ main {
     justify-content: center;
 
 }
+/*Times Section*/
+#times {
+    background:url("../images/dublin-city.webp")no-repeat center/cover;
+    display:flex;
+    flex-wrap: wrap;
+}
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding:15px;
+    text-align: center;
+/* this will not wrap on screens of less than 400px wide */
+    flex-basis: 200px;
+    flex-grow: 1;
+    border:2px solid white;
+}
+#times h3 {
+    color: #fafafa;
+}
 /* Footer */
 #social-networks {
     text-align: center;
