--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,8 +183,15 @@ main {
 font-size:160%;
 padding: 5%;
 color:#3a3a3a;
-
 }
+
+ /* media query large or landescape phones and larger (576px and up)*/
+ @media screen and (min-width:576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0; 
+    }
+    }
 /* media query tablets and larger (768px and up)*/
 @media screen and (min-width:768px){
   /* Header */  
@@ -235,10 +242,20 @@ main{
         align-self: flex-end;
     }
 }
+/*gallery*/
+#photos {
+    column-count: 3;
+}
+
+
 /* media query notebooks and larger (992px and up)*/
 @media screen and (min-width:992px) {
     #menu a:hover{
         border-bottom:1px solid #3a3a3a;
+    }
+    /*gallery*/
+    #photos {
+        column-count: 4;
     }
 
 }
