--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,8 +82,10 @@ nav {
 main { 
    
      /* Make main element take up any surplus space to push footer down */
-    flex:auto;
+    flex:1 0 auto;
     margin-top:47px;
+    display: flex;
+    flex-direction: column;
 }
 /*hero section*/
 #hero{
@@ -171,6 +173,49 @@ main {
 #photos {
     line-height: 0;
 }
+/*Signup*/
+#signup {
+    background-image:url(../images/signup-image.webp);
+    background-size: cover;
+    background-position: 75%;
+    padding:20px 10% 0 10%;
+    flex-grow: 1;
+}
+#signup-form {
+    color:#ffffff;
+    background-color: rgba(60,60,60, 0.6);
+    padding:30px;
+}
+#signup-form>h2{
+    color:#fafafa;
+    margin-bottom: 20px;
+}
+.text-input { 
+    background: transparent;
+    color:#fafafa;
+    width:100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    padding:0 5px;
+    border:1px solid #fafafa;
+    border-radius: 2px;
+
+}
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+}
+.join-button {
+    background-color:#454b1b ;
+    color:#fafafa;
+    font-size: 100%;
+    border-radius:2px;
+    padding: 15px 32px;
+    margin-top: 20px;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -240,6 +285,24 @@ main{
     #benefits-mental > div{
         text-align: end;
         align-self: flex-end;
+    }
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+    #signup-form {
+        position: absolute;
+        max-width: 400px;
+        left:10%;
+        top:150px;
+    }
+    .text-input:hover{
+        border-color: #f16c6b;
+
+    }
+    .join-button:hover{
+        background-color: #fafafa;
+        color:#454b1b;
     }
 }
 /*gallery*/
