--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ h1, h2, h3 {
 /* Header */
 header {
     background-color: #ffffff;
-    padding left: 0 1rem;
+    padding: 0 1rem;
     position:fixed;
     z-index:99;
     width: 100%;
@@ -117,7 +117,7 @@ main {
 #reasons h2{
     margin-bottom: 20px;
     text-align:center;
-    font: size 280%;
+    font-size: 280%;
 }
 #benefits-physical>div,
 #benefits-mental>div {
@@ -257,7 +257,7 @@ color:#3a3a3a;
     display:none;
     }
 #logo{
-    font: size 280%;
+    font-size: 280%;
     line-height: 75px;
     margin:0 0.5rem;
 }
